--- a/_examples/_components.scss
+++ b/_examples/_components.scss
@@ -1,11 +1,11 @@
 @import '../AreaChart/style';
+@import '../Choropleth/style';
 @import '../DiscreteBarChart/style';
 @import '../IntroManager/style';
 @import '../ItemSelector/style';
 @import '../LeafletChoropleth/style';
 @import '../Legend/style';
 @import '../LineChart/style';
-@import '../MapChoropleth/style';
 @import '../Navigation/style';
 @import '../OffsetAreaChart/style';
 @import '../Punchcard/style';
