Lowercase+hyphenate all folder names to match npm package names; leave JS imports as camelCase as per JS convention.

--- a/_examples/_components.scss
+++ b/_examples/_components.scss
@@ -1,13 +1,13 @@
-@import '../AreaChart/style';
-@import '../Choropleth/style';
-@import '../DiscreteBarChart/style';
-@import '../IntroManager/style';
-@import '../ItemSelector/style';
-@import '../LeafletChoropleth/style';
-@import '../Legend/style';
-@import '../LineChart/style';
-@import '../Navigation/style';
-@import '../OffsetAreaChart/style';
-@import '../Punchcard/style';
-@import '../ScatterPlot/style';
-@import '../TextList/style';
+@import '../areachart/style';
+@import '../choropleth/style';
+@import '../discretebarchart/style';
+@import '../intromanager/style';
+@import '../itemselector/style';
+@import '../leaflet-choropleth/style';
+@import '../legend/style';
+@import '../linechart/style';
+@import '../navigation/style';
+@import '../offsetareachart/style';
+@import '../punchcard/style';
+@import '../scatterplot/style';
+@import '../textlist/style';
